# fastapi_crud

./: .env  pyproject.toml
fastapi_crud/: database.py  main.py
fastapi_crud/memo/: model.py  router.py  schema.py
