[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["benjamin <benjamin.confiac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
databases = {extras = ["mysql"], version = "^0.9.0"}
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
